cabal-version: 3.0
name:          cardano-ledger-conformance
version:       0.1.0.0.0.0.0.0.1
license:       Apache-2.0
maintainer:    operations@iohk.io
author:        IOHK
bug-reports:   https://github.com/intersectmbo/cardano-ledger/issues
synopsis:      Testing utilities for conformance testing
description:   Testing utilities for conformance testing
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/intersectmbo/cardano-ledger
    subdir:   libs/cardano-ledger-conformance

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:  Test.Cardano.Ledger.Conformance
    hs-source-dirs:   src
    other-modules:    Test.Cardano.Ledger.Conformance.Orphans
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages

    build-depends:
        base >=4.14 && <5,
        bytestring,
        cardano-strict-containers,
        microlens,
        mtl,
        bytestring,
        data-default-class,
        cardano-ledger-binary,
        cardano-ledger-core == 1.10.0.0.0.0.0.0.2,
        cardano-ledger-mary == 1.5.0.0.0.0.0.0.2,
        cardano-ledger-shelley == 1.9.0.0.0.0.0.0.2,
        cardano-ledger-alonzo == 1.6.0.0.0.0.0.0.2,
        cardano-ledger-babbage == 1.6.0.0.0.0.0.0.2,
        cardano-ledger-conway:{cardano-ledger-conway, testlib},
        cardano-ledger-executable-spec,
        cardano-crypto-class,
        cardano-ledger-core:testlib,
        cardano-ledger-test,
        containers,
        small-steps,
        text

    if !impl(ghc >=9.2)
        ghc-options: -Wno-incomplete-patterns

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wredundant-constraints -Wpartial-fields
        -Wunused-packages -threaded -rtsopts -with-rtsopts=-N

    build-depends:
        base >=4.14 && <5,
        cardano-ledger-conformance,
        cardano-ledger-core:testlib
